--- a/styles/style.css
+++ b/styles/style.css
@@ -349,7 +349,7 @@ button {
   border-left: 14px solid white;
 }
 
-.social-list__link {
+.footer .social-list__link {
   text-transform: uppercase;
   font-weight: bold;
   aspect-ratio: 1 / 1;
@@ -357,11 +357,17 @@ button {
   justify-content: center;
   align-items: center;
   padding: 30px;
+  border: 0;
   border-right: 4px solid white;
   color: white;
   height: 100%;
   border-top: 0;
   border-bottom: 0;
+}
+
+.footer .social-list__link:hover {
+  background-color: #FFFF00;
+  color: black;
 }
 
 @media (width <= 1728px) {
@@ -570,7 +576,7 @@ button {
     gap: 10px;
   }
 
-  .social-list__link {
+  .footer .social-list__link {
     border: 4px solid white;
     padding: 10px;
     font-size: 24px;
