--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ button {
   color: black;
   font-size: 30px;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  white-space: nowrap;
 }
 
 .button:hover {
@@ -178,23 +179,25 @@ button {
   justify-self: center;
 }
 
+.list-section:not(:first-of-type) {
+  margin-top: 40px;
+}
+
 .list-section__title {
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
-  border-top: 4px solid black;
-  border-bottom: 8px solid black;
-  border-left: 14px solid black;
-  padding: 20px 14px;
+  border-bottom: 4px solid black;
+  padding: 20px 40px 14px;
   position: relative;
 }
 
 .list-section__title::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 6px;
-  left: 0;
-  background-color: #FFFF00;
+  left: 25px;
+  background-color: #ffff00;
   width: 60px;
   height: 45px;
   z-index: -1;
@@ -208,7 +211,7 @@ button {
 }
 
 .card-list__link {
-  display: block;
+  display: flex;
   height: 100%;
   transition: background-color 0.3s ease-in-out;
 }
@@ -285,7 +288,7 @@ button {
 .promo {
   background-color: #2400FF;
   color: white;
-  padding: 25px 260px 40px;
+  padding: 40px 260px;
   gap: 20px;
   margin: 40px auto 0;
   border-top: 4px solid black;
@@ -326,6 +329,15 @@ button {
 .promo__button:hover {
   background-color: white;
   color: #2400FF;
+}
+
+.promo-code {
+  color: yellow;
+}
+
+.promo__button:has(.promo-code):hover {
+  background-color: transparent;
+  cursor: default;
 }
 
 .footer {
@@ -449,7 +461,7 @@ button {
   }
 
   .promo {
-    padding: 25px 120px 40px;
+    padding: 40px 120px;
   }
 
   .promo__title {
@@ -565,6 +577,14 @@ button {
 
   .cards-list {
     padding: 68px 14px;
+  }
+
+  .list-section__title {
+    padding: 20px 14px 14px;
+  }
+
+  .list-section__title::before {
+    left: 6px;
   }
 
   .footer {
